@@ -1,3 +1,7 @@
+2008-03-07  Larry Doolittle <ldoolitt@recycle.lbl.gov>
+
+	* Fix cmdtxt crash on if statements.
+
 2008-01-01  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Fix slash treatment in expmeta.
